# python-project-52

./: .coverage  .gitignore  Makefile  README.md  build.sh  pyproject.toml  ruff.toml
.github/workflows/: test.yml
locale/ru/LC_MESSAGES/: django.mo  django.po
static/static/: staticfiles.json
task_manager/: forms.py  mixins.py  settings.py  urls.py  views.py
task_manager/labels/: models.py  urls.py  views.py
task_manager/labels/fixtures/: label_test.json
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: urls.py  views.py
task_manager/statuses/fixtures/: status_test.json
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: filters.py  models.py  views.py
task_manager/tasks/fixtures/: task_test.json
task_manager/tasks/migrations/: 0001_initial.py
task_manager/templates/: base.html  index.html
task_manager/templates/labels/: label_list.html
task_manager/templates/statuses/: status_list.html
task_manager/templates/tasks/: task_detail.html  task_list.html
task_manager/templates/users/: user_list.html
task_manager/tests/: test_filters.py  test_labels.py  test_statuses.py  test_tasks.py  test_users.py
task_manager/users/: forms.py  models.py  urls.py
task_manager/users/fixtures/: user_test.json
task_manager/users/migrations/: 0001_initial.py
