[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dj-database-url>=2.3.0",
    "django>=5.2",
    "django-bootstrap5>=25.1",
    "django-debug-toolbar>=5.1.0",
    "django-filter>=25.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "rollbar>=1.3.0",
    "waitress>=3.0.2",
    "whitenoise>=6.9.0",
]

[dependency-groups]
dev = [
    "coverage>=7.6.12",
    "pytest-django>=4.10.0",
    "ruff>=0.11.2",
]

[tool.hatch.build.targets.sdist]
include = ["task_manager"]

[tool.hatch.build.targets.wheel]
packages = ["task_manager"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
